--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Kazuki Nakajima",
   "license": "MIT",
   "dependencies": {
+    "@line/bot-sdk": "^6.0.1",
     "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
