--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample code to add LINE Pay to web app and bot.",
   "main": "index.js",
   "scripts": {
-    "start": "node web.js",
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
